# chat-agent

./: .gitignore
docs/dsl/: workspace.dsl  workspace.json
src/.net/ChatAgentClient/: ChatAgentClient.sln  docker-compose.yml
src/.net/ChatAgentClient/ChatAgentClient/: ChatAgentClient.http  Dockerfile  Program.cs
src/.net/ChatAgentClient/ChatAgentClient/ChatAgentAngularApp/: README.md  angular.json  package-lock.json  package.json
src/.net/ChatAgentClient/ChatAgentClient/Properties/: launchSettings.json
src/support-agent/: .dockerfile  main.py  pyproject.toml
src/support-agent/api/: application.py  router.py
src/support-agent/api/chat/: chat.py
src/support-agent/api/home/: home.py
src/support-agent/application/dto/: chat_request.py  chat_response.py
src/support-agent/application/features/: chat_state.py  flow_provider.py  workflow_generator.py
src/support-agent/application/infrastructure/: complaint_agent.py  llm_configuration.py  llm_provider.py
src/support-agent/application/infrastructure/agents/: association_agent.py  company_info_agent.py  complaint_agent.py
src/support-agent/application/infrastructure/nodes/: agent_routing.py  category_evaluator.py  complaint_handler.py  dummy_node.py  end_node.py  human_inerrupt.py  other_handler.py  should_continue.py
src/support-agent/application/infrastructure/persistance/: in_memory_storage.py
src/support-agent/application/infrastructure/tools/: add_complaint.py  check_complaint.py
src/support-agent/domain/: complaint_model.py  request_category.py
(+13 files in other folders)
